[gd_scene load_steps=12 format=2]

[ext_resource path="res://menu/menu_screen.gd" type="Script" id=1]
[ext_resource path="res://themes/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://gui/utils/button_click_sound_utils.gd" type="Script" id=4]
[ext_resource path="res://resources/fonts/fipps/Fipps-Regular.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 74
outline_size = 2
outline_color = Color( 0.254902, 0.254902, 0.254902, 0.6 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StreamTexture" id=6]
load_path = "res://.import/btn_fermer.png-0d2b5bedf15106a447eef610dad190ea.stex"

[sub_resource type="StreamTexture" id=7]
load_path = "res://.import/ecran_titre.png-8400030ecbaa7c203e0a1d090cdf647a.stex"

[node name="MenuScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Body" type="VBoxContainer" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1000, 400 )
size_flags_vertical = 3
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="VBoxContainer" parent="GUI/Body"]
margin_right = 1280.0
margin_bottom = 28.0
size_flags_stretch_ratio = 0.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="GUI/Body/Header"]
margin_right = 1280.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="TopHeader" type="HBoxContainer" parent="GUI/Body/Header"]
margin_top = 24.0
margin_right = 1280.0
margin_bottom = 24.0
alignment = 2

[node name="Control" type="Control" parent="GUI/Body/Header/TopHeader"]
margin_right = 1244.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Control2" type="Control" parent="GUI/Body/Header/TopHeader"]
margin_left = 1248.0
margin_right = 1280.0
rect_min_size = Vector2( 10, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="SubHeader" type="HBoxContainer" parent="GUI/Body/Header"]
margin_top = 28.0
margin_right = 1280.0
margin_bottom = 28.0

[node name="Control" type="Control" parent="GUI/Body/Header/SubHeader"]
margin_right = 1280.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.09

[node name="space" type="Control" parent="GUI/Body"]
margin_top = 32.0
margin_right = 1280.0
margin_bottom = 62.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="MainSection" type="HBoxContainer" parent="GUI/Body"]
margin_top = 66.0
margin_right = 1280.0
margin_bottom = 685.0
size_flags_vertical = 3

[node name="margin" type="Control" parent="GUI/Body/MainSection"]
margin_right = 1157.0
margin_bottom = 619.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.92

[node name="space2" type="Control" parent="GUI/Body/MainSection"]
margin_left = 1161.0
margin_right = 1280.0
margin_bottom = 619.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3

[node name="Footer" type="Control" parent="GUI/Body"]
margin_top = 689.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="Node2D" type="Node2D" parent="GUI/Body"]

[node name="Title" type="Label" parent="GUI/Body/Node2D"]
margin_left = 17.4614
margin_top = 316.016
margin_right = 1297.46
margin_bottom = 466.016
rect_rotation = -23.5
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Hungry Kitty"
align = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="GUI"]
position = Vector2( 1013.17, 51.1762 )

[node name="Menu" type="VBoxContainer" parent="GUI/Node2D"]
margin_right = 172.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyCreationButton" type="Button" parent="GUI/Node2D/Menu"]
margin_right = 172.0
margin_bottom = 35.0
rect_min_size = Vector2( 25, 35 )
rect_pivot_offset = Vector2( -195.981, -14.0354 )
focus_neighbour_top = NodePath("../../../Node2D2/Quit")
focus_neighbour_bottom = NodePath("../OptionButton")
focus_next = NodePath("../OptionButton")
focus_previous = NodePath("../../../Node2D2/Quit")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "menu.main.play"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="Button" parent="GUI/Node2D/Menu"]
margin_top = 75.0
margin_right = 172.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 35 )
focus_neighbour_top = NodePath("../LobbyCreationButton")
focus_neighbour_bottom = NodePath("../CreditsButton")
focus_next = NodePath("../CreditsButton")
focus_previous = NodePath("../LobbyCreationButton")
text = "menu.main.options"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="GUI/Node2D/Menu"]
margin_top = 150.0
margin_right = 172.0
margin_bottom = 185.0
rect_min_size = Vector2( 0, 35 )
focus_neighbour_top = NodePath("../OptionButton")
focus_neighbour_bottom = NodePath("../../../Node2D2/Quit")
focus_next = NodePath("../../../Node2D2/Quit")
focus_previous = NodePath("../OptionButton")
text = "menu.main.credits"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="footer" type="Control" parent="GUI/Node2D/Menu"]
margin_top = 225.0
margin_right = 172.0
margin_bottom = 572.0
size_flags_vertical = 3
size_flags_stretch_ratio = 15.0

[node name="Node2D2" type="Node2D" parent="GUI"]
position = Vector2( 1123.88, 594.653 )

[node name="Quit" type="Button" parent="GUI/Node2D2"]
margin_left = 1.0
margin_top = 3.0
margin_right = 98.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 25 )
focus_neighbour_top = NodePath("../../Node2D/Menu/CreditsButton")
focus_neighbour_bottom = NodePath("../../Node2D/Menu/LobbyCreationButton")
focus_next = NodePath("../../Node2D/Menu/LobbyCreationButton")
focus_previous = NodePath("../../Node2D/Menu/CreditsButton")
theme = ExtResource( 2 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GUI/Node2D2/Quit"]
margin_right = 16.0
margin_bottom = 16.0
rect_scale = Vector2( 6, 6 )
texture = SubResource( 6 )
stretch_mode = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Node2D3" type="Node2D" parent="GUI"]
position = Vector2( 568.595, 512.757 )

[node name="Label" type="Label" parent="GUI/Node2D3"]
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 2 )
text = "
Flèche: naviger dans les menus
W/Z A/Q S D : se déplacer
E : faire ses besions
F: intéragire
ESPACE: miauler

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 10, 10 )
texture = SubResource( 7 )
centered = false
__meta__ = {
"_edit_lock_": true
}
